# Cli_Tool

./: .gitignore  MCP_README.md  README.md  frida-tool.bat  frida-tool.ps1  mcp_config.json  mcp_server.py  pyproject.toml  requirements.txt  script.bat  start_mcp_server.bat
commands/: check_cert.py  connect_wifi.py  devices.py  install_cert.py  klfrida.py  packages.py  proxy.py  reboot.py
utils/: adb_utils.py
